[gd_scene load_steps=27 format=3 uid="uid://dpxe6jiswo1v2"]

[ext_resource type="Script" uid="uid://dyy6ws8a2onar" path="res://src/gameplay/gameplay.gd" id="1_41n4r"]
[ext_resource type="Theme" uid="uid://ctxs8u1hji701" path="res://assets/art/hud/new_default_theme.tres" id="1_s5sow"]
[ext_resource type="Script" uid="uid://b4mr4nqec0gds" path="res://src/player/player.gd" id="2_r5as3"]
[ext_resource type="Script" uid="uid://6ugnkjruhtf5" path="res://src/days/day_manager.gd" id="2_ueusv"]
[ext_resource type="Texture2D" uid="uid://c1p3v8fymq62j" path="res://assets/art/backgrounds/bg1.jpg" id="3_thf4h"]
[ext_resource type="Script" uid="uid://b7pjdgjub5h4f" path="res://src/gameplay/hud/mood_tracker.gd" id="3_ueusv"]
[ext_resource type="Script" uid="uid://sjthgtynkfv6" path="res://src/gameplay/hud/day_count_tracker.gd" id="4_7pdct"]
[ext_resource type="Texture2D" uid="uid://cau7fhofse071" path="res://assets/art/hud/corner.png" id="5_tjoey"]
[ext_resource type="Script" uid="uid://cg87aybsxabex" path="res://src/gameplay/hud/weather_display.gd" id="5_uk44f"]
[ext_resource type="PackedScene" uid="uid://bycg83yijgs5y" path="res://src/gameplay/hud/stat_details_display.tscn" id="6_5b1cb"]
[ext_resource type="Texture2D" uid="uid://dad2kxhql8oq4" path="res://assets/art/hud/todo_list.png" id="6_cjh3j"]
[ext_resource type="Script" uid="uid://cqei7411b6o8u" path="res://src/gameplay/hud/major_objective_banner.gd" id="6_yvprt"]
[ext_resource type="Texture2D" uid="uid://dbxi6f6uibdfa" path="res://assets/art/mood_sad.png" id="7_mr2br"]
[ext_resource type="PackedScene" uid="uid://bp1i2ft4knik3" path="res://src/gameplay/hud/activity_selection.tscn" id="7_uk44f"]
[ext_resource type="Texture2D" uid="uid://cct6qlsqgd110" path="res://assets/art/weather_fair.png" id="9_efja1"]
[ext_resource type="PackedScene" uid="uid://cfn4gebfndu50" path="res://src/gameplay/hud/events/major_event_display.tscn" id="10_r22ir"]
[ext_resource type="PackedScene" uid="uid://dmsrehee6sok5" path="res://src/gameplay/hud/events/event_outcome_display.tscn" id="11_p86j0"]
[ext_resource type="Texture2D" uid="uid://cegwrvc3utwup" path="res://assets/art/weather_hot.png" id="11_ug0ik"]
[ext_resource type="PackedScene" path="res://src/gameplay/hud/end_day_summary.tscn" id="12_fbjph"]
[ext_resource type="Script" uid="uid://c267m4vx16j5c" path="res://src/gameplay/turbo_toggle.gd" id="13_23xb3"]
[ext_resource type="Texture2D" uid="uid://dlvul26ow8vip" path="res://assets/art/substats/substat_creation_settings_flipped_64px.png" id="16_thf4h"]
[ext_resource type="PackedScene" uid="uid://cd342lxt581l4" path="res://src/menus/settings/settings_menu.tscn" id="17_ddeuh"]

[sub_resource type="Animation" id="Animation_23xb3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fbjph"]
resource_name = "end_of_day_fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_applyResultsOfActivity"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s5sow"]
resource_name = "new_day_fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_onNewDayFadeIn"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect/EndDaySummary:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5sow"]
_data = {
&"RESET": SubResource("Animation_23xb3"),
&"end_of_day_fadeout": SubResource("Animation_fbjph"),
&"new_day_fade_in": SubResource("Animation_s5sow")
}

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s5sow")
script = ExtResource("1_41n4r")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_r5as3")
metadata/_custom_type_script = "uid://b4mr4nqec0gds"

[node name="DayManager" type="Node" parent="."]
script = ExtResource("2_ueusv")
metadata/_custom_type_script = "uid://6ugnkjruhtf5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_s5sow")
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.8175213, 0.8175213, 0.81752115, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_thf4h")
expand_mode = 1

[node name="HudElements" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="HudElements"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_s5sow")

[node name="StatDetails" parent="HudElements/Control" instance=ExtResource("6_5b1cb")]
layout_mode = 0
offset_left = 218.0
offset_top = 62.0
offset_right = 705.0
offset_bottom = 228.0

[node name="CornerCompass" type="TextureRect" parent="HudElements/Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("5_tjoey")
expand_mode = 1

[node name="ToDoNote" type="TextureRect" parent="HudElements/Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("6_cjh3j")
expand_mode = 1

[node name="WeatherDisplay" type="Control" parent="HudElements/Control"]
layout_mode = 1
anchors_preset = 0
script = ExtResource("5_uk44f")

[node name="CurrentWeatherText" type="Label" parent="HudElements/Control/WeatherDisplay"]
visible = false
layout_mode = 0
offset_top = -1.0
offset_right = 137.0
offset_bottom = 21.333334
text = "Current Weather"

[node name="ForecastWeatherText" type="Label" parent="HudElements/Control/WeatherDisplay"]
visible = false
layout_mode = 0
offset_top = 25.0
offset_right = 137.0
offset_bottom = 47.333336
text = "Forecast Weather"

[node name="CurrentWeather" type="TextureRect" parent="HudElements/Control/WeatherDisplay"]
layout_mode = 0
offset_left = -6.0
offset_top = -14.0
offset_right = 163.0
offset_bottom = 148.0
texture = ExtResource("11_ug0ik")
stretch_mode = 4

[node name="ForecastWeather" type="TextureRect" parent="HudElements/Control/WeatherDisplay"]
layout_mode = 0
offset_left = 16.0
offset_top = 218.0
offset_right = 108.0
offset_bottom = 315.0
texture = ExtResource("9_efja1")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="HudElements/Control/WeatherDisplay/ForecastWeather"]
layout_mode = 0
offset_left = 16.0
offset_top = -24.0
offset_right = 86.0
offset_bottom = 12.5
theme_override_font_sizes/font_size = 12
text = "Tomorrow's
Forecast:"

[node name="MoodTracker" type="TextureRect" parent="HudElements/Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 113.0
offset_right = 80.0
offset_bottom = 183.0
texture = ExtResource("7_mr2br")
expand_mode = 1
stretch_mode = 4
script = ExtResource("3_ueusv")

[node name="DayCountTracker" type="Label" parent="HudElements/Control"]
layout_mode = 0
offset_left = 138.0
offset_top = 5.0
offset_right = 219.0
offset_bottom = 97.333336
theme_override_font_sizes/font_size = 32
text = "Day
23"
horizontal_alignment = 1
script = ExtResource("4_7pdct")

[node name="MajorObjectiveBanner" type="RichTextLabel" parent="HudElements/Control"]
layout_mode = 0
offset_left = 994.0
offset_top = 4.0
offset_right = 1277.0
offset_bottom = 123.0
bbcode_enabled = true
text = "Next Event:
[font_size=24]\"A Birthday to Remember\"[/font_size]
in %d days "
scroll_active = false
horizontal_alignment = 1
script = ExtResource("6_yvprt")

[node name="ButtonOpenSettings" type="Button" parent="HudElements/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 72.0
grow_horizontal = 0
icon = ExtResource("16_thf4h")

[node name="CenterContainer" type="CenterContainer" parent="HudElements/Control/ButtonOpenSettings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HudElements/Control/ButtonOpenSettings/CenterContainer"]
layout_mode = 2
text = "Settings"

[node name="SettingsMenu" parent="HudElements/Control" instance=ExtResource("17_ddeuh")]
layout_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 256.0
offset_right = 776.0
offset_bottom = 295.08334
theme_type_variation = &"HeaderLarge"
text = "What will I do today?"

[node name="ActivitySelection1" parent="." instance=ExtResource("7_uk44f")]
layout_mode = 0
anchors_preset = 0
offset_left = 182.0
offset_top = 324.0
offset_right = 438.0
offset_bottom = 604.9861

[node name="ActivitySelection2" parent="." instance=ExtResource("7_uk44f")]
layout_mode = 0
anchors_preset = 0
offset_left = 509.0
offset_top = 324.0
offset_right = 765.0
offset_bottom = 604.9861

[node name="ActivitySelection3" parent="." instance=ExtResource("7_uk44f")]
layout_mode = 0
anchors_preset = 0
offset_left = 852.0
offset_top = 322.0
offset_right = 1108.0
offset_bottom = 602.9861

[node name="TurboToggle" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 638.0
offset_right = 156.0
offset_bottom = 669.0
text = "Skip Diary: OFF"
script = ExtResource("13_23xb3")

[node name="EventsLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
visible = false

[node name="ColorRect" type="TextureRect" parent="EventsLayer"]
self_modulate = Color(0.49747366, 0.49747366, 0.49747366, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_s5sow")
texture = ExtResource("3_thf4h")
expand_mode = 1

[node name="MajorEventDisplay" parent="EventsLayer/ColorRect" instance=ExtResource("10_r22ir")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1

[node name="Control" type="Control" parent="EventsLayer/ColorRect/MajorEventDisplay"]
layout_mode = 2
mouse_filter = 2

[node name="EventStatDetails" parent="EventsLayer/ColorRect/MajorEventDisplay/Control" instance=ExtResource("6_5b1cb")]
unique_name_in_owner = true
layout_mode = 0
offset_left = -177.3591
offset_top = 141.33408
offset_right = 309.6409
offset_bottom = 307.3341
mouse_filter = 2

[node name="Panel" parent="EventsLayer/ColorRect/MajorEventDisplay/Control/EventStatDetails" index="0"]
offset_right = -314.0
offset_bottom = 280.99997

[node name="StudyStats" parent="EventsLayer/ColorRect/MajorEventDisplay/Control/EventStatDetails" index="2"]
offset_left = 10.0
offset_right = 50.0

[node name="PhysicalStats" parent="EventsLayer/ColorRect/MajorEventDisplay/Control/EventStatDetails" index="3"]
offset_left = 8.0
offset_top = 172.0
offset_right = 48.0
offset_bottom = 212.0

[node name="CraftStats" parent="EventsLayer/ColorRect/MajorEventDisplay/Control/EventStatDetails" index="4"]
offset_left = 22.0
offset_top = 315.0
offset_right = 62.0
offset_bottom = 355.0

[node name="EventOutcomeDisplay" parent="EventsLayer/ColorRect" instance=ExtResource("11_p86j0")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
visible = false

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0.49747366, 0.49747366, 0.49747366, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_s5sow")
texture = ExtResource("3_thf4h")
expand_mode = 1

[node name="EndDaySummary" parent="CanvasLayer/ColorRect" instance=ExtResource("12_fbjph")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -200.0
offset_right = 200.0
theme_type_variation = &"NestedPanelContainer"

[editable path="EventsLayer/ColorRect/MajorEventDisplay/Control/EventStatDetails"]
